[gd_scene load_steps=25 format=3 uid="uid://dp3dxv1k748mt"]

[ext_resource type="Texture2D" uid="uid://d0x0jbwaj58e" path="res://graphics/icons/rotate-relative-right.svg" id="2"]
[ext_resource type="Script" uid="uid://d3j8dwm1jc0vn" path="res://tools/editor/editor_modules/ArrangeModule.gd" id="3"]
[ext_resource type="Script" uid="uid://clphuuunv7ko1" path="res://tools/editor/controls/HBEditorSpinBox.gd" id="4"]
[ext_resource type="Script" uid="uid://bp3qrjahqrk31" path="res://tools/editor/controls/HBEditorButtonPad.gd" id="4_dfckn"]
[ext_resource type="Texture2D" uid="uid://c2gg4gcju4k0o" path="res://graphics/icons/rotate-relative-left.svg" id="5"]
[ext_resource type="Texture2D" uid="uid://duqakdxh3srcf" path="res://graphics/icons/arrange-pad.svg" id="5_52snf"]
[ext_resource type="Texture2D" uid="uid://bgi10pnx3ybc0" path="res://graphics/icons/circle-clockwise.svg" id="7_5egqo"]
[ext_resource type="Texture2D" uid="uid://2uvl0wk3sttg" path="res://graphics/icons/arrow-left-right.svg" id="8"]
[ext_resource type="Texture2D" uid="uid://d260pibrxbfsb" path="res://graphics/icons/circle-counterclockwise.svg" id="8_y761g"]
[ext_resource type="PackedScene" uid="uid://pr5h8mdaei60" path="res://tools/editor/EditorModule.tscn" id="9"]
[ext_resource type="Texture2D" uid="uid://b31dw8i43dqui" path="res://graphics/icons/circle-clockwise-inside.svg" id="9_dg0tx"]
[ext_resource type="Texture2D" uid="uid://dtcdjl17e1n3u" path="res://graphics/icons/flip-horizontal.svg" id="10"]
[ext_resource type="Texture2D" uid="uid://i1107r05ppvg" path="res://graphics/icons/circle-counterclockwise-inside.svg" id="10_kubfp"]
[ext_resource type="Script" uid="uid://cfed4elquwuh3" path="res://tools/editor/controls/HBEditorButton.gd" id="11"]
[ext_resource type="Texture2D" uid="uid://clminyrnisrob" path="res://graphics/icons/arc-clockwise.svg" id="11_b6kd6"]
[ext_resource type="Texture2D" uid="uid://cjhs2nu751okm" path="res://graphics/icons/arc-counterclockwise.svg" id="12_1o5sg"]
[ext_resource type="Texture2D" uid="uid://bqawaajhn8wet" path="res://graphics/icons/arrow-up-down.svg" id="13"]
[ext_resource type="Texture2D" uid="uid://cv5mtgvq58ugk" path="res://graphics/icons/arc-clockwise-inside.svg" id="13_xu3le"]
[ext_resource type="PackedScene" uid="uid://bknhgu2vawn75" path="res://tools/editor/EditorArrangeMenu.tscn" id="14"]
[ext_resource type="Texture2D" uid="uid://v0wdc06kgiow" path="res://graphics/icons/arc-counterclockwise-inside.svg" id="14_dbbtw"]
[ext_resource type="Texture2D" uid="uid://bhy1gxhk6i74r" path="res://graphics/icons/rotate-relative-center.svg" id="16"]
[ext_resource type="Texture2D" uid="uid://n7ot7i7efk77" path="res://graphics/icons/flip-vertical.svg" id="17"]
[ext_resource type="Texture2D" uid="uid://cfjtyob2diytx" path="res://graphics/icons/rotate-absolute.svg" id="18"]
[ext_resource type="Script" uid="uid://d3nluthy6ngac" path="res://menus/HBoxRatioContainer.gd" id="21"]

[node name="EditorModule" instance=ExtResource("9")]
script = ExtResource("3")
module_location = "left_panel"
module_name = "Arrange notes"
button_group_name = "arrange_buttons"

[node name="MarginContainer" parent="." index="0"]
layout_mode = 1
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" parent="MarginContainer/ScrollContainer" index="0"]
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "Arrange in a line..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="0"]
layout_mode = 2
tooltip_text = "The arrange wheel helps you place notes quickly (Hold Shift for reverse)."
mouse_filter = 0
text = "Hold SHORTCUT for quick placing."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="1"]
layout_mode = 2
tooltip_text = "Angle at which to place the notes."
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
text = "Line type:"
horizontal_alignment = 1

[node name="ArrangeModeOptionButton" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" index="1" groups=["disabled_ui"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="StandardHBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Angle at which to place the notes."
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/StandardHBoxContainer" index="0"]
layout_mode = 2
text = "Slope angle:"
horizontal_alignment = 1

[node name="ArrangeAngleSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/StandardHBoxContainer" index="1" groups=["disabled_ui"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 90.0
step = 0.1
allow_greater = true
allow_lesser = true
suffix = "ยบ"
custom_arrow_step = 1.0
script = ExtResource("4")

[node name="DiagonalStepHBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="3"]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Angle at which to place the notes."
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/DiagonalStepHBoxContainer" index="0"]
layout_mode = 2
text = "X Step:"
horizontal_alignment = 1

[node name="DiagonalStepXSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/DiagonalStepHBoxContainer" index="1" groups=["disabled_ui"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 192.0
allow_greater = true
suffix = "px"
custom_arrow_step = 1.0
script = ExtResource("4")

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/DiagonalStepHBoxContainer" index="2"]
layout_mode = 2
text = "Y step:"
horizontal_alignment = 1

[node name="DiagonalStepYSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/DiagonalStepHBoxContainer" index="3" groups=["disabled_ui"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 192.0
allow_greater = true
suffix = "px"
custom_arrow_step = 1.0
script = ExtResource("4")

[node name="FullWidthHBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="4"]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Angle at which to place the notes."
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/FullWidthHBoxContainer" index="0"]
layout_mode = 2
text = "Vertical step:"
horizontal_alignment = 1

[node name="VerticalStepSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/FullWidthHBoxContainer" index="1" groups=["disabled_ui"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 192.0
allow_greater = true
suffix = "px"
custom_arrow_step = 1.0
script = ExtResource("4")

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="5"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3" index="0"]
layout_mode = 2
tooltip_text = "Arrange from the last note
rather than the first.
Shortcut: Shift"
alignment = 1

[node name="ReverseArrangeCheckBox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/HBoxContainer" index="0" groups=["disabled_ui"]]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/HBoxContainer" index="1"]
layout_mode = 2
text = "Arrange from last note"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3" index="1"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3" index="2"]
layout_mode = 2
tooltip_text = "Set basic angles while arranging.
Shortcut: Control"
alignment = 1

[node name="AutoAngleCheckBox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/HBoxContainer2" index="0" groups=["disabled_ui"]]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/HBoxContainer2" index="1"]
layout_mode = 2
text = "Change angles"

[node name="ArrangeButtonPad" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer" index="1" groups=["arrange_buttons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(104, 547)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35
script = ExtResource("4_dfckn")
text = "Arrange in a Line"
tooltip = "Arranges the selected notes in a
straight line with the given slope or
step between each note.
Press a specific arrow to select the
line direction."
texture = ExtResource("5_52snf")
button_mode = "function"
function_name = "_menu_arrange_button_pressed"
metadata/_custom_type_script = ExtResource("4_dfckn")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer" index="3"]
layout_mode = 2
text = "Arrange in a circle..."
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="4"]
layout_mode = 2
tooltip_text = "Amount of 8th notes required for
a full revolution."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/HBoxContainer" index="0"]
layout_mode = 2
text = "Size:"

[node name="CircleSizeSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/HBoxContainer" index="1" groups=["disabled_ui"]]
unique_name_in_owner = true
layout_mode = 2
min_value = 4.0
max_value = 64.0
value = 16.0
script = ExtResource("4")

[node name="CircleSizeHSlider" type="HSlider" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2" index="1" groups=["disabled_ui"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 4.0
max_value = 64.0
value = 16.0
tick_count = 8
ticks_on_borders = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="5"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer2" index="0"]
layout_mode = 2
text = "Inside angles"
horizontal_alignment = 1

[node name="HBoxRatioContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer2" index="1"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
script = ExtResource("21")

[node name="HBEditorButton" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxRatioContainer" index="0" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(183, 524)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Clockwise"
tooltip = "Makes a clockwise circle with
angles pointing inwards."
texture = ExtResource("9_dg0tx")
transform_id = 2
action = "editor_make_circle_cw_inside"

[node name="HBEditorButton2" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxRatioContainer" index="1" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(183, 572)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Counter
clockwise"
tooltip = "Makes a counter-clockwise circle
with angles pointing inwards."
texture = ExtResource("10_kubfp")
transform_id = 3
action = "editor_make_circle_ccw_inside"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3" index="1"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3" index="2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer" index="0"]
layout_mode = 2
text = "Outside angles"
horizontal_alignment = 1

[node name="HBoxRatioContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer" index="1"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
script = ExtResource("21")

[node name="HBEditorButton" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxRatioContainer" index="0" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(183, 524)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Clockwise"
tooltip = "Makes a clockwise circle with
angles pointing outwards."
texture = ExtResource("7_5egqo")
action = "editor_make_circle_cw"

[node name="HBEditorButton2" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxRatioContainer" index="1" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(183, 572)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Counter
clockwise"
tooltip = "Makes a counter-clockwise circle
with angles pointing outwards."
texture = ExtResource("8_y761g")
transform_id = 1
action = "editor_make_circle_ccw"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer" index="6"]
layout_mode = 2

[node name="Label5" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer" index="7"]
layout_mode = 2
text = "Arrange in an arc..."
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="8"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4/VBoxContainer2" index="0"]
layout_mode = 2
text = "Inside angles"
horizontal_alignment = 1

[node name="HBoxRatioContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4/VBoxContainer2" index="1"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
script = ExtResource("21")

[node name="HBEditorButton" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4/VBoxContainer2/HBoxRatioContainer" index="0" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(183, 524)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Clockwise"
tooltip = "Makes a clockwise arc between the
starting and ending notes, with
angles pointing inwards.
If the distance between them is too
big, it will be set to the maximum."
texture = ExtResource("13_xu3le")
transform_id = 8
action = "editor_make_arc_cw_inside"

[node name="HBEditorButton2" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4/VBoxContainer2/HBoxRatioContainer" index="1" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(183, 572)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Counter
clockwise"
tooltip = "Makes a counter-clockwise arc
between the starting and ending
notes, with angles pointing inwards.
If the distance between them is too
big, it will be set to the maximum."
texture = ExtResource("14_dbbtw")
transform_id = 9
action = "editor_make_arc_ccw_inside"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4" index="1"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4" index="2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4/VBoxContainer" index="0"]
layout_mode = 2
text = "Outside angles"
horizontal_alignment = 1

[node name="HBoxRatioContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4/VBoxContainer" index="1"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
script = ExtResource("21")

[node name="HBEditorButton" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxRatioContainer" index="0" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(183, 524)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Clockwise"
tooltip = "Makes a clockwise arc between the
starting and ending notes, with
angles pointing outwards.
If the distance between them is too
big, it will be set to the maximum."
texture = ExtResource("11_b6kd6")
transform_id = 10
action = "editor_make_arc_cw"

[node name="HBEditorButton2" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4/VBoxContainer/HBoxRatioContainer" index="1" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(183, 572)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Counter
clockwise"
tooltip = "Makes a counter-clockwise arc
between the starting and ending
notes, with angles pointing outwards.
If the distance between them is too
big, it will be set to the maximum."
texture = ExtResource("12_1o5sg")
transform_id = 11
action = "editor_make_arc_ccw"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer" index="9"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer" index="10"]
layout_mode = 2
text = "Flip and mirror..."
horizontal_alignment = 1

[node name="HBoxRatioContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="11"]
custom_minimum_size = Vector2(312, 0)
layout_mode = 2
script = ExtResource("21")

[node name="HBEditorButton" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxRatioContainer" index="0" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(208, 573)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Mirror
vertically"
tooltip = "Mirror notes vertically across
the center of the screen."
texture = ExtResource("17")
transform_id = 4
action = "editor_mirror_v"

[node name="HBEditorButton2" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxRatioContainer" index="1" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(208, 574)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Mirror
horizontally"
tooltip = "Mirror notes horizontally across
the center of the screen."
texture = ExtResource("10")
transform_id = 5
action = "editor_mirror_h"

[node name="HBEditorButton3" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxRatioContainer" index="2" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(208, 573)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Flip
vertically"
tooltip = "Flip notes vertically across their
center."
texture = ExtResource("13")
transform_id = 6
action = "editor_flip_v"

[node name="HBEditorButton4" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxRatioContainer" index="3" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(208, 574)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Flip
horizontally"
tooltip = "Flip notes horizontally across
their center."
texture = ExtResource("8")
transform_id = 7
action = "editor_flip_h"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer" index="12"]
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer" index="13"]
layout_mode = 2
text = "Rotate notes..."
horizontal_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="14"]
layout_mode = 2
tooltip_text = "Amount of 8th notes required for
a full revolution."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer5" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer5/HBoxContainer" index="0"]
layout_mode = 2
text = "Angle:"

[node name="RotationAngleSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer5/HBoxContainer" index="1" groups=["disabled_ui"]]
unique_name_in_owner = true
layout_mode = 2
min_value = -180.0
max_value = 180.0
suffix = "ยบ"
script = ExtResource("4")

[node name="RotationAngleHSlider" type="HSlider" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer5" index="1" groups=["disabled_ui"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -180.0
max_value = 180.0
tick_count = 9
ticks_on_borders = true

[node name="HBoxRatioContainer2" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="15"]
custom_minimum_size = Vector2(276, 0)
layout_mode = 2
script = ExtResource("21")

[node name="HBEditorButton" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxRatioContainer2" index="0" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(176, 573)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Around
center"
tooltip = "Rotate the notes around the
center of the selected notes."
texture = ExtResource("16")
transform_id = 12
action = "editor_rotate_center"

[node name="HBEditorButton2" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxRatioContainer2" index="1" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(176, 574)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Around
left point"
tooltip = "Rotate the notes around the
leftmost selected note."
texture = ExtResource("5")
transform_id = 13
action = "editor_rotate_left"

[node name="HBEditorButton3" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxRatioContainer2" index="2" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(176, 573)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Around
right point"
tooltip = "Rotate the notes around the
rightmost selected note."
texture = ExtResource("2")
transform_id = 14
action = "editor_rotate_right"

[node name="HBEditorButton4" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxRatioContainer2" index="3" groups=["arrange_buttons"]]
custom_minimum_size = Vector2(176, 621)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("11")
text = "Around
screen
center"
tooltip = "Rotate the notes around the
absolute screen center."
texture = ExtResource("18")
transform_id = 15
action = "editor_rotate_screen_center"

[node name="ArrangeMenu" parent="." index="1" instance=ExtResource("14")]
visible = false

[connection signal="item_selected" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ArrangeModeOptionButton" to="." method="arrange_menu_mode_selected"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/StandardHBoxContainer/ArrangeAngleSpinBox" to="." method="_on_arrange_angle_spinbox_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/DiagonalStepHBoxContainer/DiagonalStepXSpinBox" to="." method="_on_arrange_diagonal_step_spinbox_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/DiagonalStepHBoxContainer/DiagonalStepYSpinBox" to="." method="_on_arrange_diagonal_step_spinbox_value_changed"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/FullWidthHBoxContainer/VerticalStepSpinBox" to="." method="_on_arrange_vstep_spinbox_value_changed"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/HBoxContainer2/AutoAngleCheckBox" to="." method="_on_auto_angle_check_box_toggled"]
